uefi-macros/tests/ui/fail/entry_bad_generic.rs
#![no_main]

use uefi::prelude::*;

#[entry]
fn main<T>() -> Status {
    Status::SUCCESS
}
